--- a/NavigationCodelab/app/build.gradle
+++ b/NavigationCodelab/app/build.gradle
@@ -102,7 +102,7 @@ dependencies {
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
         // Treat all Kotlin warnings as errors
-        allWarningsAsErrors = true
+        allWarningsAsErrors = false
 
         freeCompilerArgs += '-opt-in=kotlin.RequiresOptIn'
 
